clusters/homelab/apps/enshrouded/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: enshrouded-server
  name: enshrouded-server
  namespace: enshrouded
spec:
  selector:
    matchLabels:
      app: enshrouded-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: enshrouded-server
    spec:
      containers:
      - env:
        - name: SERVER_NAME
          value: "Mar-a-Lago"
        - name: SERVER_SLOTS
          value: "16"
        - name: SERVER_PASSWORD
          valueFrom:
            secretKeyRef:
              key: server-password
              name: enshrouded-server
        - name: PORT
          value: "15637"
        - name: STEAM_PORT
          value: "27015"
        image: sknnr/enshrouded-dedicated-server:proton-v2.3.2
        imagePullPolicy: IfNotPresent
        name: enshrouded-server
        command: ["/bin/bash", "-c"]
        args:
        - |
          sed -i 's|ln -sf /proc/1/fd/1|: # disabled symlink: ln -sf /proc/1/fd/1|' /home/steam/entrypoint.sh
          exec /home/steam/entrypoint.sh 2>&1 | tee /home/steam/enshrouded/logs/enshrouded_server.log
        ports:
        - containerPort: 15637
          protocol: UDP
        - containerPort: 27015
          protocol: UDP
        resources:
          requests:
            cpu: 500m
            memory: 4Gi
          limits:
            cpu: 6000m
            memory: 12Gi
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /home/steam/enshrouded
          name: steam-cache
        - mountPath: /home/steam/enshrouded/savegame
          name: enshrouded-state
        - mountPath: /home/steam/enshrouded/logs
          name: logs
      - name: metrics-sidecar
        image: ghcr.io/frzifus/enshrouded-sidecar:0.0.27
        args:
        - "-otlp.endpoint=backend.observability.svc.cluster.local:4317"
        - "-log.file=/home/steam/enshrouded/logs/enshrouded_server.log"
        - "-log.tail=500"
        volumeMounts:
        - mountPath: /home/steam/enshrouded/logs
          name: logs
          readOnly: true
        securityContext:
          allowPrivilegeEscalation: false
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: gpu2
      securityContext:
        fsGroup: 10000
        runAsGroup: 10000
        runAsUser: 10000
      volumes:
      - name: enshrouded-state
        persistentVolumeClaim:
          claimName: enshrouded-state
      - name: steam-cache
        persistentVolumeClaim:
          claimName: enshrouded-steam-cache
      - name: logs
        emptyDir: {}
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: enshrouded-server
#   # annotations:
#   #   metallb.universe.tf/allow-shared-ip: "enshrouded"
# spec:
#   selector:
#     app: enshrouded-server
#   ports:
#     - name: game-query
#       protocol: UDP
#       port: 15637
#       targetPort: 15637
#     - name: steam-traffic
#       protocol: UDP
#       port: 27015
#       targetPort: 27015
  # loadBalancerIP: 192.168.5.111
  # clusterIP: 10.108.129.20
  # type: LoadBalancer
  # loadBalancerClass: metallb
  # externalTrafficPolicy: Local
  # internalTrafficPolicy: Cluster
